@@ -1,6 +1,6 @@
 
 name = Net-Ifconfig-Wrapper
-version = 0.19
+version = 0.22
 license = Perl_5
 author = Daniel Podolsky, tpaba@cpan.org
 copyright_holder = Daniel Podolsky, tpaba@cpan.org
